# libdecaf

./: Makefile  Makefile.am  Makefile.in  TODO  config.status  configure  configure.ac
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
aux/: decaffeinate_ed25519_too.sage.py  like_eddsa  like_eddsa.cxx  sign_revision.sage
aux/ristretto/: ristretto.aux  ristretto.sage.py  ristretto_inversess_of_identity
src/: Makefile.am
